@@ -1,6 +1,7 @@
 package Server.DAL;
 
 import Server.DAL.DiscountRuleDTOs.StoreDiscountRuleDTO;
+import Server.Domain.CommonClasses.Pair;
 import Server.Domain.UserManager.User;
 import Server.Domain.UserManager.UserStateEnum;
 import com.mongodb.MongoClientSettings;
@@ -28,37 +29,39 @@ public class DALService implements Runnable{
 
     // NOTE: acquisition of locks is in the order they appear in the field list
 
-    private Map<Integer, StoreDTO> stores;
+    private Map<Integer, Pair<StoreDTO, Long>> stores;
     private List<StoreDTO> storeSaveCache;
     private ReadWriteLock storeLock;
 
-    private Map<String, UserDTO> users;
+    private Map<String, Pair<UserDTO, Long>> users;
     private List<UserDTO> userSaveCache;
     private ReadWriteLock userLock;
 
-    private Map<String, AccountDTO> accounts;
+    private Map<String, Pair<AccountDTO, Long>> accounts;
     private List<AccountDTO> accountSaveCache;
     private ReadWriteLock accountLock;
 
-    private Map<String, AdminAccountDTO> admins;
+    private Map<String, Pair<AdminAccountDTO, Long>> admins;
     private List<AdminAccountDTO> adminAccountSaveCache;
     private ReadWriteLock adminAccountLock;
 
-    private Map<Integer, ProductDTO> products;
+    private Map<Integer, Pair<ProductDTO, Long>> products;
     private List<ProductDTO> productSaveCache;
     private ReadWriteLock productLock;
 
-    private Map<Integer, PublisherDTO> publisher;
+    private Map<Integer, Pair<PublisherDTO, Long>> publisher;
     private List<PublisherDTO> publisherSaveCache;
     private ReadWriteLock publisherLock;
 
-    private Map<String, ShoppingCartDTO> guestCarts;
+    private Map<String, Pair<ShoppingCartDTO, Long>> guestCarts;
     private ReadWriteLock guestCartLock;
 
     private String dbName = "commerceDatabase";
     private String dbURL = "mongodb+srv://commerceserver:commerceserver@cluster0.gx2cx.mongodb.net/database1?retryWrites=true&w=majority";
 
     private boolean useLocal = false;
+
+    private boolean cleaningCache = false;
 
     private static class CreateSafeThreadSingleton {
         private static final DALService INSTANCE = new DALService();
@@ -94,6 +97,14 @@ public class DALService implements Runnable{
     }
 
     public void startDB(){
+        if(!cleaningCache && !useLocal) {
+            System.out.println("Starting cache cleaning thread");
+            CacheCleaner cacheCleaner = new CacheCleaner();
+            Thread cleaningThread = new Thread(cacheCleaner);
+            cleaningThread.start();
+            cleaningCache = true;
+            System.out.println("Cache cleaning thread started");
+        }
         if(!useLocal) {
             System.out.println("Starting DAL thread");
             Thread thread = new Thread(this);
@@ -217,6 +228,94 @@ public class DALService implements Runnable{
         }
     }
 
+    public void cleanCache(){
+        this.storeLock.writeLock().lock();
+        this.userLock.writeLock().lock();
+        this.accountLock.writeLock().lock();
+        this.adminAccountLock.writeLock().lock();
+        this.productLock.writeLock().lock();
+        this.publisherLock.writeLock().lock();
+        this.guestCartLock.writeLock().lock();
+
+        System.out.println("Cleaning cache");
+
+        long currTimeMillis = System.currentTimeMillis();
+        long interval = 2*60*1000;
+
+        List<Integer> ids = new Vector<>(this.stores.keySet());
+        for(int storeID : ids){
+            long oldTimeMillis = this.stores.get(storeID).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.stores.remove(storeID);
+                System.out.println("Removed store " + storeID + " from cache");
+            }
+        }
+
+        List<String> usernames = new Vector<>(this.users.keySet());
+        for(String username : usernames){
+            long oldTimeMillis = this.users.get(username).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.users.remove(username);
+                System.out.println("Removed user " + username + " from cache");
+            }
+        }
+
+        usernames = new Vector<>(this.accounts.keySet());
+        for(String username : usernames){
+            long oldTimeMillis = this.accounts.get(username).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.accounts.remove(username);
+                System.out.println("Removed account " + username + " from cache");
+            }
+        }
+
+        usernames = new Vector<>(this.admins.keySet());
+        for(String username : usernames){
+            long oldTimeMillis = this.admins.get(username).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.admins.remove(username);
+                System.out.println("Removed admin " + username + " from cache");
+            }
+        }
+
+        ids = new Vector<>(this.products.keySet());
+        for(int productID : ids){
+            long oldTimeMillis = this.products.get(productID).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.products.remove(productID);
+                System.out.println("Removed product " + productID + " from cache");
+            }
+        }
+
+        ids = new Vector<>(this.publisher.keySet());
+        for(int publisherID : ids){
+            long oldTimeMillis = this.publisher.get(publisherID).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.publisher.remove(publisherID);
+                System.out.println("Removed publisher " + publisherID + " from cache");
+            }
+        }
+
+        usernames = new Vector<>(this.guestCarts.keySet());
+        for(String username : usernames){
+            long oldTimeMillis = this.guestCarts.get(username).getSecond();
+            if(currTimeMillis >= oldTimeMillis + interval){ // 5 minutes have passed since last read/write
+                this.guestCarts.remove(username);
+                System.out.println("Removed cart of " + username + " from cache");
+            }
+        }
+
+        this.storeLock.writeLock().unlock();
+        this.userLock.writeLock().unlock();
+        this.accountLock.writeLock().unlock();
+        this.adminAccountLock.writeLock().unlock();
+        this.productLock.writeLock().unlock();
+        this.publisherLock.writeLock().unlock();
+        this.guestCartLock.writeLock().unlock();
+
+        System.out.println("Finished cleaning cache");
+    }
+
     public void useTestDatabase() {
         dbName = "testDatabase";
     }
@@ -229,16 +328,17 @@ public class DALService implements Runnable{
         this.storeLock.writeLock().lock();
         this.userLock.writeLock().lock();
 
-        // TODO need guest lock?
         if(userDTO.getState() == UserStateEnum.GUEST) {
-            this.guestCarts.put(userDTO.getName(), userDTO.getShoppingCart());
+            this.guestCartLock.writeLock().lock();
+            this.guestCarts.put(userDTO.getName(), new Pair<>(userDTO.getShoppingCart(), System.currentTimeMillis()));
+            this.guestCartLock.writeLock().unlock();
         }
 
         if(userDTO.getState() != UserStateEnum.GUEST) {
-            this.users.put(userDTO.getName(), userDTO);
+            this.users.put(userDTO.getName(), new Pair<>(userDTO, System.currentTimeMillis()));
         }
         for(StoreDTO storeDTO : storeDTOs){
-            this.stores.put(storeDTO.getStoreID(), storeDTO);
+            this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
         }
 
         if(!useLocal) {
@@ -259,11 +359,12 @@ public class DALService implements Runnable{
         this.publisherLock.writeLock().lock();
 
         if(this.publisher.containsKey(0)){
-            publisherDTO = this.publisher.get(0);
+            publisherDTO = this.publisher.get(0).getFirst();
+            this.publisher.put(0, new Pair<>(publisherDTO, System.currentTimeMillis()));
         }
         else if(useLocal){
             publisherDTO = new PublisherDTO();
-            this.publisher.put(0, publisherDTO);
+            this.publisher.put(0, new Pair<>(publisherDTO, System.currentTimeMillis()));
         }
         else{
             try (MongoClient mongoClient = MongoClients.create(this.dbURL)) {
@@ -288,7 +389,7 @@ public class DALService implements Runnable{
             if(publisherDTO == null)
                 publisherDTO = new PublisherDTO();
 
-            this.publisher.put(0, publisherDTO);
+            this.publisher.put(0, new Pair<>(publisherDTO, System.currentTimeMillis()));
         }
 
         this.publisherLock.writeLock().unlock();
@@ -298,7 +399,7 @@ public class DALService implements Runnable{
     public void savePublisher(PublisherDTO publisherDTO) {
         this.publisherLock.writeLock().lock();
 
-        this.publisher.put(0, publisherDTO);
+        this.publisher.put(0, new Pair<>(publisherDTO, System.currentTimeMillis()));
 
         if(!useLocal) {
             this.publisherSaveCache.add(publisherDTO);
@@ -314,7 +415,7 @@ public class DALService implements Runnable{
     public void addAccount(AccountDTO accountDTO) {
         this.accountLock.writeLock().lock();
 
-        this.accounts.put(accountDTO.getUsername(), accountDTO);
+        this.accounts.put(accountDTO.getUsername(), new Pair<>(accountDTO, System.currentTimeMillis()));
 
         if(!useLocal) {
             this.accountSaveCache.add(accountDTO);
@@ -332,7 +433,8 @@ public class DALService implements Runnable{
         this.accountLock.writeLock().lock();
 
         if(this.accounts.containsKey(username)){
-            accountDTO = this.accounts.get(username);
+            accountDTO = this.accounts.get(username).getFirst();
+            this.accounts.put(username, new Pair<>(accountDTO, System.currentTimeMillis()));
         }
         else if(!useLocal){
             try (MongoClient mongoClient = MongoClients.create(this.dbURL)) {
@@ -357,7 +459,7 @@ public class DALService implements Runnable{
             }
 
             if(accountDTO != null)
-                this.accounts.put(username, accountDTO);
+                this.accounts.put(username, new Pair<>(accountDTO, System.currentTimeMillis()));
         }
 
         this.accountLock.writeLock().unlock();
@@ -367,7 +469,7 @@ public class DALService implements Runnable{
     public void addAdmin(AdminAccountDTO adminAccountDTO) {
         this.adminAccountLock.writeLock().lock();
 
-        this.admins.put(adminAccountDTO.getUsername(), adminAccountDTO);
+        this.admins.put(adminAccountDTO.getUsername(), new Pair<>(adminAccountDTO, System.currentTimeMillis()));
 
         if(!useLocal) {
             this.adminAccountSaveCache.add(adminAccountDTO);
@@ -383,7 +485,7 @@ public class DALService implements Runnable{
     public void insertStore(StoreDTO storeDTO) {
         this.storeLock.writeLock().lock();
 
-        this.stores.put(storeDTO.getStoreID(), storeDTO);
+        this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
 
         if(!useLocal) {
             this.storeSaveCache.add(storeDTO);
@@ -401,7 +503,8 @@ public class DALService implements Runnable{
         this.storeLock.writeLock().lock();
 
         if(this.stores.containsKey(storeId)){
-            storeDTO = this.stores.get(storeId);
+            storeDTO = this.stores.get(storeId).getFirst();
+            this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
         }
         else if(!useLocal){
             try (MongoClient mongoClient = MongoClients.create(this.dbURL)) {
@@ -426,7 +529,7 @@ public class DALService implements Runnable{
             }
 
             if(storeDTO != null)
-                this.stores.put(storeDTO.getStoreID(), storeDTO);
+                this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
         }
 
         this.storeLock.writeLock().unlock();
@@ -436,8 +539,13 @@ public class DALService implements Runnable{
     public Collection<StoreDTO> getAllStores() {
         if(useLocal){
             this.storeLock.writeLock().lock();
-            Collection<StoreDTO> storeDTOS = stores.values();
+            Collection<Pair<StoreDTO, Long>> storeValues = stores.values();
             this.storeLock.writeLock().unlock();
+
+            Collection<StoreDTO> storeDTOS = new Vector<>();
+            for(Pair<StoreDTO, Long> pair : storeValues){
+                storeDTOS.add(pair.getFirst());
+            }
 
             return storeDTOS;
         }
@@ -473,15 +581,16 @@ public class DALService implements Runnable{
         this.storeLock.writeLock().lock();
         this.userLock.writeLock().lock();
 
-        // TODO guest lock?
         if(userDTO.getState() == UserStateEnum.GUEST) {
-            this.guestCarts.put(userDTO.getName(), userDTO.getShoppingCart());
+            this.guestCartLock.writeLock().lock();
+            this.guestCarts.put(userDTO.getName(), new Pair<>(userDTO.getShoppingCart(), System.currentTimeMillis()));
+            this.guestCartLock.writeLock().unlock();
         }
 
         if(userDTO.getState() != UserStateEnum.GUEST)
-            this.users.put(userDTO.getName(), userDTO);
+            this.users.put(userDTO.getName(), new Pair<>(userDTO, System.currentTimeMillis()));
 
-        this.stores.put(storeDTO.getStoreID(), storeDTO);
+        this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
 
         if(!useLocal){
             this.userSaveCache.add(userDTO);
@@ -501,17 +610,18 @@ public class DALService implements Runnable{
         this.userLock.writeLock().lock();
         this.productLock.writeLock().lock();
 
-        // TODO guest lock?
         if(userDTO.getState() == UserStateEnum.GUEST) {
-            this.guestCarts.put(userDTO.getName(), userDTO.getShoppingCart());
+            this.guestCartLock.writeLock().lock();
+            this.guestCarts.put(userDTO.getName(), new Pair<>(userDTO.getShoppingCart(), System.currentTimeMillis()));
+            this.guestCartLock.writeLock().unlock();
         }
 
         if(userDTO.getState() != UserStateEnum.GUEST)
-            this.users.put(userDTO.getName(), userDTO);
+            this.users.put(userDTO.getName(), new Pair<>(userDTO, System.currentTimeMillis()));
 
-        this.stores.put(storeDTO.getStoreID(), storeDTO);
+        this.stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
 
-        this.products.put(productDTO.getProductID(), productDTO);
+        this.products.put(productDTO.getProductID(), new Pair<>(productDTO, System.currentTimeMillis()));
 
         if(!useLocal){
             this.userSaveCache.add(userDTO);
@@ -532,8 +642,8 @@ public class DALService implements Runnable{
         this.storeLock.writeLock().lock();
         this.productLock.writeLock().lock();
 
-        stores.put(storeDTO.getStoreID(), storeDTO);
-        products.put(productDTO.getProductID(), productDTO);
+        stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
+        products.put(productDTO.getProductID(), new Pair<>(productDTO, System.currentTimeMillis()));
 
         if(!useLocal){
             this.storeSaveCache.add(storeDTO);
@@ -552,7 +662,7 @@ public class DALService implements Runnable{
         this.storeLock.writeLock().lock();
         this.productLock.writeLock().lock();
 
-        stores.put(storeDTO.getStoreID(), storeDTO);
+        stores.put(storeDTO.getStoreID(), new Pair<>(storeDTO, System.currentTimeMillis()));
         products.remove(productDTO.getProductID());
 
         if(!useLocal){
@@ -573,7 +683,8 @@ public class DALService implements Runnable{
         this.userLock.writeLock().lock();
 
         if(this.users.containsKey(username)){
-            userDTO = this.users.get(username);
+            userDTO = this.users.get(username).getFirst();
+            this.users.put(username, new Pair<>(userDTO, System.currentTimeMillis()));
         }
         else if(!useLocal){
             try (MongoClient mongoClient = MongoClients.create(this.dbURL)) {
@@ -598,7 +709,7 @@ public class DALService implements Runnable{
             }
 
             if(userDTO != null)
-                this.users.put(username, userDTO);
+                this.users.put(username, new Pair<>(userDTO, System.currentTimeMillis()));
         }
 
         this.userLock.writeLock().unlock();
@@ -609,10 +720,12 @@ public class DALService implements Runnable{
         this.userLock.writeLock().lock();
 
         if(userDTO.getState() == UserStateEnum.GUEST) {
-            this.guestCarts.put(userDTO.getName(), userDTO.getShoppingCart());
+            this.guestCartLock.writeLock().lock();
+            this.guestCarts.put(userDTO.getName(), new Pair<>(userDTO.getShoppingCart(), System.currentTimeMillis()));
+            this.guestCartLock.writeLock().unlock();
         }
         else{
-            this.users.put(userDTO.getName(), userDTO);
+            this.users.put(userDTO.getName(), new Pair<>(userDTO, System.currentTimeMillis()));
             if(!useLocal) {
                 this.userSaveCache.add(userDTO);
 
@@ -631,10 +744,12 @@ public class DALService implements Runnable{
 
         for(UserDTO userDTO : userDTOList) {
             if (userDTO.getState() == UserStateEnum.GUEST) {
-                this.guestCarts.put(userDTO.getName(), userDTO.getShoppingCart());
+                this.guestCartLock.writeLock().lock();
+                this.guestCarts.put(userDTO.getName(), new Pair<>(userDTO.getShoppingCart(), System.currentTimeMillis()));
+                this.guestCartLock.writeLock().unlock();
             }
             else{
-                this.users.put(userDTO.getName(), userDTO);
+                this.users.put(userDTO.getName(), new Pair<>(userDTO, System.currentTimeMillis()));
                 if(!useLocal) {
                     this.userSaveCache.add(userDTO);
                     addedToCache = true;
